# constexpr-random

./: CMakeLists.txt  README.md
include/crand/concepts/: random_number_distribution.hpp  uniform_random_bit_generator.hpp
include/crand/distributions/: bernoulli_distribution.hpp  distribution_limits.hpp  normal_distribution.hpp  uniform_int_distribution.hpp  uniform_real_distribution.hpp
include/crand/engines/: splitmix64_engine.hpp  xorshift_engine.hpp  xoshiro256_starstar_engine.hpp
include/crand/engines/detail/: xoshiro256_starstar_details.hpp
test/distributions/: test_bernoulli_distribution.cpp  test_normal_distribution.cpp  test_uniform_int_distribution.cpp  test_uniform_real_distribution.cpp
test/engines/: helper_check_uniformness.hpp  test_splitmix64_engine.cpp  test_xorshift_engine.cpp  test_xoshiro256_starstar_engine.cpp
